Added endpoints for historical
